--- a/Movies/Base.lproj/Main.storyboard
+++ b/Movies/Base.lproj/Main.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="hYJ-dF-mmX">
-    <device id="retina6_1" orientation="portrait">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Tds-KL-cuF">
+    <device id="retina5_9" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
@@ -15,7 +15,7 @@
             <objects>
                 <viewController id="lse-6m-75E" customClass="OneMovieViewController" customModule="Movies" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="RWh-bA-4yJ">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Yur-BS-mmr">
@@ -64,33 +64,93 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="FEJ-oJ-QiA" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2820.289855072464" y="-308.03571428571428"/>
+            <point key="canvasLocation" x="3762.4000000000001" y="-308.12807881773398"/>
+        </scene>
+        <!--First View Controller-->
+        <scene sceneID="O8U-jK-WFW">
+            <objects>
+                <viewController id="GrM-PZ-5IW" customClass="FirstViewController" customModule="Movies" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="5c9-Ty-hfZ">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="movie-clapper-open" translatesAutoresizingMaskIntoConstraints="NO" id="Kl5-2y-rgO">
+                                <rect key="frame" x="-68.666666666666686" y="98" width="512.33333333333337" height="225"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="220" id="01J-YA-EQc"/>
+                                    <constraint firstAttribute="width" constant="512" id="7WY-wZ-1BH"/>
+                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="225" id="Oyh-Gf-OIH"/>
+                                    <constraint firstAttribute="height" constant="225" id="u1j-V6-qGY"/>
+                                </constraints>
+                            </imageView>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter a movie to search for..." textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="4iQ-P4-x05">
+                                <rect key="frame" x="72.666666666666686" y="361" width="230" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="230" id="6FJ-cj-oEI"/>
+                                    <constraint firstAttribute="height" constant="30" id="q76-wh-nPs"/>
+                                </constraints>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="VmE-p7-MIJ">
+                                <rect key="frame" x="163.66666666666666" y="415" width="48" height="34"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="48" id="LXq-h2-vDI"/>
+                                    <constraint firstAttribute="height" constant="34" id="P71-c9-l3X"/>
+                                </constraints>
+                                <state key="normal" title="Search"/>
+                                <connections>
+                                    <action selector="movieToSerchButton:" destination="GrM-PZ-5IW" eventType="touchUpInside" id="aOv-BN-JtJ"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="Kl5-2y-rgO" firstAttribute="top" secondItem="hcO-Qu-Cmv" secondAttribute="top" constant="10" id="EOd-SY-l7d"/>
+                            <constraint firstItem="4iQ-P4-x05" firstAttribute="centerX" secondItem="5c9-Ty-hfZ" secondAttribute="centerX" id="KIc-EK-frW"/>
+                            <constraint firstItem="Kl5-2y-rgO" firstAttribute="centerX" secondItem="5c9-Ty-hfZ" secondAttribute="centerX" id="OfK-jk-NnJ"/>
+                            <constraint firstItem="VmE-p7-MIJ" firstAttribute="top" secondItem="4iQ-P4-x05" secondAttribute="bottom" constant="24" id="htN-mL-clm"/>
+                            <constraint firstItem="VmE-p7-MIJ" firstAttribute="centerX" secondItem="5c9-Ty-hfZ" secondAttribute="centerX" id="sfb-fe-YCu"/>
+                            <constraint firstItem="4iQ-P4-x05" firstAttribute="top" secondItem="Kl5-2y-rgO" secondAttribute="bottom" constant="38" id="yG0-G2-DLq"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="hcO-Qu-Cmv"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="wlG-Dd-25p"/>
+                    <connections>
+                        <outlet property="movieToSearch" destination="4iQ-P4-x05" id="adQ-Ta-g5t"/>
+                        <segue destination="cgV-hV-Gjl" kind="show" identifier="goToFoundMovies" id="MG3-7G-J15"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="pdh-kB-Bkj" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2194.4000000000001" y="-308.12807881773398"/>
         </scene>
         <!--Found Movies-->
         <scene sceneID="D4I-bW-ZZV">
             <objects>
                 <tableViewController id="cgV-hV-Gjl" customClass="TableViewController" customModule="Movies" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="wYF-aN-HgJ">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <prototypes>
                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="Cell" textLabel="wRB-VD-S4S" detailTextLabel="f4c-Le-MFI" rowHeight="162" style="IBUITableViewCellStyleSubtitle" id="6aQ-MH-DWL">
-                                <rect key="frame" x="0.0" y="28" width="414" height="162"/>
+                                <rect key="frame" x="0.0" y="28" width="375" height="162"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="6aQ-MH-DWL" id="11y-rU-aut">
-                                    <rect key="frame" x="0.0" y="0.0" width="414" height="161.5"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="161.66666666666666"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="wRB-VD-S4S">
-                                            <rect key="frame" x="20" y="61" width="33.5" height="20.5"/>
+                                            <rect key="frame" x="16.000000000000004" y="61.000000000000007" width="33.333333333333336" height="20.333333333333332"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Subtitle" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="f4c-Le-MFI">
-                                            <rect key="frame" x="20" y="84.5" width="44" height="14.5"/>
+                                            <rect key="frame" x="15.999999999999996" y="84.333333333333329" width="43.666666666666664" height="14.333333333333334"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                             <nil key="textColor"/>
@@ -112,62 +172,28 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="JP1-yE-DUU" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2020.289855072464" y="-308.03571428571428"/>
-        </scene>
-        <!--First View Controller-->
-        <scene sceneID="ryC-E0-HdO">
-            <objects>
-                <viewController id="7xc-zz-8Wa" customClass="FirstViewController" customModule="Movies" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="FbU-Cg-5AJ">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter a movie to search for" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="zGd-0j-cJb">
-                                <rect key="frame" x="29" y="131" width="374" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <nil key="textColor"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits"/>
-                            </textField>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="poB-Z5-hVt">
-                                <rect key="frame" x="149" y="202" width="101" height="81"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="Search"/>
-                                <connections>
-                                    <action selector="searchButton:" destination="7xc-zz-8Wa" eventType="touchUpInside" id="ka8-z5-7yO"/>
-                                </connections>
-                            </button>
-                        </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <viewLayoutGuide key="safeArea" id="V1v-bQ-Loa"/>
-                    </view>
-                    <navigationItem key="navigationItem" id="MYh-qb-8ZE"/>
-                    <connections>
-                        <outlet property="searchMovie" destination="zGd-0j-cJb" id="Ndr-3d-ULg"/>
-                        <segue destination="cgV-hV-Gjl" kind="show" identifier="goToFoundMovies" id="YyZ-zz-pm0"/>
-                    </connections>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="Jc7-e6-TvA" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="1219" y="-308"/>
+            <point key="canvasLocation" x="2962.4000000000001" y="-308.12807881773398"/>
         </scene>
         <!--Navigation Controller-->
-        <scene sceneID="4MT-gM-ZaJ">
+        <scene sceneID="uHE-mc-42F">
             <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="hYJ-dF-mmX" sceneMemberID="viewController">
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="Tds-KL-cuF" sceneMemberID="viewController">
                     <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="4Aj-5l-dCM">
-                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="T04-jj-cW0">
+                        <rect key="frame" x="0.0" y="44" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
-                        <segue destination="7xc-zz-8Wa" kind="relationship" relationship="rootViewController" id="czk-PC-dIT"/>
+                        <segue destination="GrM-PZ-5IW" kind="relationship" relationship="rootViewController" id="eEW-AI-rHK"/>
                     </connections>
                 </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="h8Z-9u-rRX" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="TKM-z6-0cq" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="307" y="-308"/>
+            <point key="canvasLocation" x="1360.8" y="-308.12807881773398"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="movie-clapper-open" width="512" height="512"/>
+    </resources>
 </document>
